--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=e-sensei-premium.html">
-  <title>Redirecting...</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to E-Sensei Premium</title>
 </head>
 <body>
-  <p>If you are not redirected automatically, <a href="e-sensei-premium.html">click here</a>.</p>
+    <h1>Welcome to E-Sensei Premium</h1>
+    <p>Your premium content is available at <a href="e-sensei-premium.html">this link</a>.</p>
 </body>
 </html>
